--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
 
     <body>
 
       <div class="container">
+      <div class="navbar bg-white text-left">
+        <h2>Terri's Profile</h2>
+        <i class="fas fa-bars bars"></i>
+      </div>
       <div class ="box">
-        <h1>Terri's Profile</h1>
-        <img class ="img_round" src="images/terri_image.jpg" alt="">
+        <img class ="img rounded-circle" src="images/terri_image.jpg" alt="">
         <p>
         I am a developer in training, on the Le Wagon bootcamp in London. I like coding, travel and books!
       </p>
@@ -66,7 +70,9 @@
       </div>
 
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   </body>
 
 </html>
